Proposal/compiling_error.txt
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:16:49: error: expected ';' after expression
  cout <<"Welcome to the measurement converter!"endl;
                                                ^
                                                ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:16:49: error: reference to overloaded function could not be resolved; did you mean to call it?
  cout <<"Welcome to the measurement converter!"endl;
                                                ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:17:18: error: expected ';' after expression
  cout << "     " endl;
                 ^
                 ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:17:19: error: reference to overloaded function could not be resolved; did you mean to call it?
  cout << "     " endl;
                  ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:18:64: error: expected ';' after expression
  cout <<"Will you be converting Length (L/l) or Volume (V/v)?"
                                                               ^
                                                               ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:25:40: error: expected ';' after expression
  cout << "Are you converting from... "
                                       ^
                                       ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:26:35: error: expected ';' after expression
        cout << "1. Metric to Standard"endl;
                                       ^
                                       ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:26:35: error: reference to overloaded function could not be resolved; did you mean to call it?
        cout << "1. Metric to Standard"endl;
                                       ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:27:35: error: expected ';' after expression
        cout << "2. Standard to Metric"endl;
                                       ^
                                       ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:27:35: error: reference to overloaded function could not be resolved; did you mean to call it?
        cout << "2. Standard to Metric"endl;
                                       ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:32:49: error: expected ';' after expression
  cout<< "What XXX is your starting measurement"
                                                ^
                                                ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:33:29: error: expected ';' after expression
    cout << "1. centimeters"endl;
                            ^
                            ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:33:29: error: reference to overloaded function could not be resolved; did you mean to call it?
    cout << "1. centimeters"endl;
                            ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:34:28: error: expected ';' after expression
    cout << "1. decimeters"endl;
                           ^
                           ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:34:28: error: reference to overloaded function could not be resolved; did you mean to call it?
    cout << "1. decimeters"endl;
                           ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:35:24: error: expected ';' after expression
    cout << "1. meters"endl;
                       ^
                       ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:35:24: error: reference to overloaded function could not be resolved; did you mean to call it?
    cout << "1. meters"endl;
                       ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:36:28: error: expected ';' after expression
    cout << "1. decameters"endl;
                           ^
                           ;
/Users/nylamoore/Documents/cosc-a211-term-project-nemoore33/Proposal/MooreConverter.cpp:36:28: error: reference to overloaded function could not be resolved; did you mean to call it?
    cout << "1. decameters"endl;
                           ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: possible target for call
endl(basic_ostream<_CharT, _Traits>& __os)
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
